  * Fix Cisco privileged prompt discovery
    when the last line of a received block ends in #, which makes it look
    like a privileged prompt, but contains spaces

2.300005 2023-07-20

  * [#40] Support all lowercase password prompt

2.300004 2023-03-23

  * [#37] Improve phrasebook for HP

2.300003 2019-04-19

  * catch unknown personality errors

2.300002 2017-10-14

  * #25 cisco/hp/pb login failure on hp procurve (A. Zanger)
  * #27 find_prompt doesn't bail out on failure to find a prompt (A. Zanger)
  * new phrasebooks for many platforms (A. Zanger)
  * new phrasebooks for Cisco WLC and fsck IOS command (Jv Ingen)

2.200009 2017-07-25

  * [#22] remove ANSI terminal codes from CLI response

2.200006  2016-09-30

  * [#21] session debug is always output (arcanez)

2.200005  2015-02-18

  * POD typo fixes from Debian

2.200004  2015-02-14

  * Fixes to distribution

2.200003  2015-02-13

  * Fix Serial transport constructing params incompatible with cu (S. Kersley)
  * Fix spelling mistake and POD syntax issues (G. Herrmann)

2.200002  2015-02-22

  * Fix MANIFEST (salva)

2.200001  2015-01-06

  * Add Net::OpenSSH transport (salva)
  * Fix using barewords on filehandles (salva)

2.200000  2015-01-06

  * Update dist to migrate away from Dist::Zilla

2.143070  2014-11-03 20:43:12 Europe/London

  * [#14] Allow square brackets in bash prompts (M. Perry)
  * [#15] Add phrasebook for Oracle VM Manager CLI (M. Perry)

2.142720  2014-09-29 19:41:26 Europe/London

  * [#13] Fix cmd in scalar context appends a newline

2.142010  2014-07-20 21:16:26 Europe/London

  * Resepct timeout in find_prompt (Jørgen Elgaard Larsen)

2.141520  2014-06-01 16:33:00 Europe/London

  * For some reason timeout not being set? Set on Net::Telnet::get.

2.133420  2013-12-08 00:07:45 Europe/London

  * Make command removal substitute params as well (M. Perry)

2.131260  2013-05-06 20:29:38 Europe/London

  * Fix for applying default timeout

2.130880  2013-03-29 22:12:14 Europe/London
