@@ -30,8 +30,35 @@ sub buffer {
 
 sub pump {
     my $self = shift;
-    my $content = $self->wrapper->get(Timeout => $self->timeout);
-    $self->_buffer($self->_buffer . $content) if defined $content;
+
+    # try to read all blocks of already available data first
+    my $pump_buffer;
+    my $available_content = '';
+    while (defined $available_content) {
+        $available_content = $self->wrapper->get(Errmode => 'return', Timeout => 0);
+        if (defined $available_content) {
+            $self->logger->log('transport', 'debug', 'read one block of data, appending to pump buffer');
+            $pump_buffer .= $available_content;
+        }
+        else {
+            $self->logger->log('transport', 'debug', 'no block of data available');
+        }
+    }
+
+    # only try harder if no content was already available
+    if (not defined $pump_buffer) {
+        # this either returns data or throws an exception because of Net::Telnets default Errmode die
+        my $content = $self->wrapper->get(Timeout => $self->timeout);
+        if (defined $content) {
+            $self->logger->log('transport', 'debug', 'read one block of data while waiting for timeout, appending to pump buffer');
+            $pump_buffer .= $content;
+        }
+        else {
+            $self->logger->log('transport', 'debug', 'no block of data available waiting for timeout');
+        }
+    }
+    $self->_buffer($self->_buffer . $pump_buffer)
+        if defined $pump_buffer;
 }
 
 has '+timeout' => (
